fix: Footer not showing issue fixed and bugs solved

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@
 
 body {
     max-width: 100vw;
-    max-height: 100vh;
     font-family: Helvetica, sans-serif;
 }
 
@@ -112,7 +111,8 @@ body {
     font-size: 2rem;
 }
 
-.contact-container {
+.contact-container,
+.contact-form-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
